[Extensions Bindings] Report runtime.lastError without a callback

If an API is called without a callback, that API may still result in
an error. For instance:
chrome.foo.doBar();  // May fail asynchronously!

In this case, we should log the error to the console, in the same way
we would for an unchecked error in the callback.

This implements this for APIs invoked and resolved through the
APIRequestHandler, and adds a ReportUncheckedError() to the
APILastError object. This requires adding a pending request for
all requests through APIRequestHandler, instead of just those with
an associated callback.

Also add unittests for both the new APILastError method and the full
flow of logging the last error from the APIRequestHandler when a
callback isn't provided.

Bug: 839528
Change-Id: I42418bb968e06d27e34e3f8981468229343dc5c9
Reviewed-on: https://chromium-review.googlesource.com/1028357
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555868}
Former-commit-id: 5625d718f35355f73513f4c7649962d4a326cf6a